...
                    android:text="@string/filterFragment_textView_articleId"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />

                <EditText
                    android:id="@+id/filterFragment_editText_articleId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_articleId"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                        android:layout_height="wrap_content"
                        android:text="@string/filterFragment_textView_contains" />
                </LinearLayout>


                <EditText
                    android:id="@+id/filterFragment_editText_articleShortDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_articleShortDescription"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:text="@string/filterFragment_textView_pieceId"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />

                <EditText
                    android:id="@+id/filterFragment_editText_pieceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_pieceId"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:text="@string/filterFragment_textView_pieceDivision"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />

                <EditText
                    android:id="@+id/filterFragment_editText_pieceDivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_pieceDivision"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:text="@string/filterFragment_textView_colorId"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />

                <EditText
                    android:id="@+id/filterFragment_editText_colorId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_colorId"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />


                <EditText
                    android:id="@+id/filterFragment_editText_colorDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_colorDescription"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />


                <EditText
                    android:id="@+id/filterFragment_editText_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_size"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:translationY="8dp" />


                <EditText
                    android:id="@+id/filterFragment_editText_manufacturingState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/filterFragment_editText_manufacturingState"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
...
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/filterFragment_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterFragment_submitButton" />
    </LinearLayout>
</ScrollView>
