<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.lingen.hsosna.texview.MainActivity"
    tools:showIn="navigation_view"
    android:id="@+id/nav_view_test">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter"
            android:title="Filter" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="Search" />
    </group>
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_dbcon"
                android:icon="@drawable/ic_settings"
                android:title="Settings" />
        </menu>
    </item>
</menu>
